...
    <!--person details text-->
    <string name="department_text_literal">Department</string>
    <string name="date_of_birth_text_literal">Date of Birth</string>
    <!--person details text-->

    <!--watch_status text-->
    <string name="watch_status_none_title">None</string>
    <string name="watch_status_to_watch_title">To Watch</string>
    <string name="watch_status_watching_title">Watching</string>
    <string name="watch_status_watched_title">Watched</string>
    <string name="watch_status_dropped_title">Dropped</string>
    <!--add to list text-->
    <!--VIEW TEXT-->

    <!--SNACK BAR MESSAGES-->
    <string name="spotlight_fetch_error_message">Error loading spotlight</string>
...
